# sequentia

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  Test.ipynb  cliff.toml  mise.toml  notice.py  pyproject.toml  requirements.py  setup.py  tasks.py  tox.ini
.circleci/: config.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  error-or-warning.md  feature.yml  improvement.md  new-feature.md  unexpected.md
.github/workflows/: create-github-release.yml  create-pypi-release.yml  create-release-pr.yml  semantic-pull-request.yml
benchmarks/: __init__.py  plot.ipynb  requirements.txt  run.sh  test_aeon.py  test_pyts.py  test_sequentia.py  test_sktime.py  test_tslearn.py  utils.py
docs/: README.md  conf.py  index.rst  requirements.txt
docs-old/: README.md  conf.py
docs-old/sections/classifiers/: knn.rst
docs-old/sections/preprocessing/: custom.rst  downsample.rst  filter.rst  min_max_scale.rst  standardize.rst
docs/_build/doctrees/: changelog.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: changelog.rst.txt
docs/_includes/examples/classifiers/: dtwknn.py  gmmhmm.py  hmm.py  hmm_classifier.py  knn_classifier.py
docs/_includes/examples/preprocessing/: center.py  downsample.py  fft.py  filtrate.py  normalize.py  preprocess.py  standardize.py  trim_zeros.py
docs/sections/classifiers/: deepgru.rst  dtwknn.rst  gmmhmm.rst  hmm.rst  knn.rst
docs/sections/datasets/: dataset.rst  digits.rst  fsdd.rst  index.rst  introduction.rst  load_digits.rst  load_random_sequences.rst  torch_dataset.rst
docs/sections/models/: index.rst
docs/sections/models/hmm/: classifier.rst  index.rst
docs/sections/models/knn/: classifier.rst  index.rst  regressor.rst
docs/sections/preprocessing/: center.rst  compose.rst  downsample.rst  equalize.rst  fft.rst  filter.rst  filtrate.rst  index.rst  introduction.rst  min_max_scale.rst  pipeline.rst  preprocessing.rst  standardize.rst  trim_constants.rst  trim_zeros.rst
docs/sections/preprocessing/transforms/: filters.rst  function_transformer.rst
docs/source/: __init__.py  conf.py  index.rst
docs/source/_static/css/: toc.css
docs/source/sections/: configuration.rst
docs/source/sections/datasets/: digits.rst  gene_families.rst  index.rst
docs/source/sections/model_selection/: index.rst  searching.rst  splitting.rst
docs/source/sections/models/: index.rst
docs/source/sections/preprocessing/: index.rst
examples/: 2 - Pen-Tip Trajectories.ipynb  Pen-Tip Trajectories (Example).ipynb
lib-old/sequentia/classifiers/: __init__.py
lib-old/sequentia/classifiers/hmm/: __init__.py  gmmhmm.py
lib-old/sequentia/classifiers/knn/: __init__.py
lib-old/sequentia/datasets/: __init__.py  base.py
lib-old/sequentia/internals/: __init__.py  versions.py
lib-old/sequentia/preprocessing/: __init__.py
lib-old/test/lib/datasets/: test_digits.py
lib-old/test/lib/preprocessing/: test_compose.py
lib-old/test/support/: assertions.py
lib/sequentia/: __init__.py  pipeline.py
lib/sequentia/classifiers/: __init__.py
lib/sequentia/classifiers/dtwknn/: __init__.py  dtwknn.py
lib/sequentia/classifiers/hmm/: __init__.py  gmmhmm.py  hmm.py  hmm_classifier.py
lib/sequentia/classifiers/knn/: knn_classifier.py
lib/sequentia/classifiers/rnn/: __init__.py  deepgru.py  utils.py
lib/sequentia/datasets/: __init__.py  base.py  digits.py  gene_families.py  random_sequences.py
lib/sequentia/internals/: __init__.py  validator.py  versions.py
lib/sequentia/models/: __init__.py  base.py
lib/sequentia/models/hmm/: __init__.py  base.py  categorical.rst  classifier.py  hmms.py  topologies.py  variants.py
lib/sequentia/models/knn/: __init__.py  base.py  classifier.py  regressor.py
lib/sequentia/preprocessing/: __init__.py  base.py  compose.py  methods.py  preprocess.py  transforms.py
lib/sequentia/utils/: __init__.py  data.py  decorators.py  formatting.py  multiprocessing.py  sequences.py  validation.py
lib/stateful/: pattern_classifier.py  pattern_model.py
lib/test/: README.md
lib/test/lib/: test_pipeline.py
lib/test/support/: __init__.py  assertions.py  itertools.py
lib/tests/support/: __init__.py  assertions.py
make/: __init__.py  cov.py  docs.py  lint.py  release.py  tests.py
notebooks/: 1 - Input Format (Tutorial).ipynb  2 - Pen-Tip Trajectories.ipynb  2 - Preprocessing (Tutorial).ipynb  3a - KNNClassifier.ipynb  3b - GMMHMM & HMMClassifier.ipynb  3c - DeepGRU.ipynb  Pen-Tip Trajectories (Example)-Copy1.ipynb  Pen-Tip Trajectories (Example).ipynb  Untitled.ipynb  random_sequences.ipynb  requirements.txt  test.ipynb  test.pkl
notebooks-old/: 2 - Preprocessing (Tutorial).ipynb  3a - KNNClassifier.ipynb  README.md  nbutils.py
sequentia/: __init__.py  enums.py  version.py
sequentia/_internal/: _data.py  _multiprocessing.py  _sklearn.py  _typing.py  _validation.py
sequentia/_internal/_hmm/: __init__.py  topologies.py
sequentia/datasets/: __init__.py  base.py  digits.py  gene_families.py
sequentia/datasets/data/: __init__.py  digits.npz  gene_families.npz
sequentia/model_selection/: __init__.py  _search.py  _search_successive_halving.py  _split.py  _validation.py
sequentia/models/: __init__.py  base.py
sequentia/models/hmm/: __init__.py  classifier.py
sequentia/models/knn/: __init__.py  base.py  classifier.py  regressor.py
sequentia/preprocessing/: __init__.py  transforms.py
tests/: __init__.py  conftest.py
tests/unit/: test_model_selection.py  test_pipeline.py
tests/unit/test_datasets/: __init__.py  test_base.py  test_digits.py  test_gene_families.py
tests/unit/test_internal/: test_data.py
tests/unit/test_model_selection/: __init__.py
tests/unit/test_preprocessing/: test_transforms.py
(+90 files in other folders)
